# a2rpc

./: README.md  pyproject.toml
.github/workflows/: tests.yml
a2rpc/: __main__.py
ariarpcc/: __main__.py
tests/: test_cli.py  test_extra.py  test_input.py
