[project]
name = "a2rpc"
dynamic = ["version"]
description = "A CLI tool to interact with aria2c's RPC interface"
authors = [
    {name = "Jet-Logic"}
]
dependencies = [    "requests",  "pyyaml"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "a2rpc.__main__.__version__"}

[tool.black]
line-length = 127

[tool.flake8]
max-line-length = 127
